--- a/style.css
+++ b/style.css
@@ -32,10 +32,38 @@ body {
 }
 
 .results {
-    background-color: lightgreen;
+    background-color: rgb(241, 239, 239);
     width: 680px;
-    height: 100px;
+    height: 140px;
     margin-top: 5px;
+    border: 1px solid black;
+    padding-top: 10px;
+    border-radius: 5px;
 }
 
+.top-results {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* padding-top: 5px; */
+}
 
+.moves, .misses, .accuracy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
+
+.bottom-results {
+    display: flex;
+    justify-content: center;
+    height: 70px;
+    align-items: center;
+}
+
+button {
+    font-size: 25px;
+    border-radius: 5px;
+}
