--- a/style.css
+++ b/style.css
@@ -84,7 +84,18 @@ button {
     width: 700px;
 } */
 
+.hidden {
+    /* display: none; */
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+    height: 450px;
+    width: 700px;
+}
+
 
 /* position: absolute;
     width: 100%;
     height: 100%; */
+
