--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 150px;
+    gap: 70px;
     padding-left: 27px;
 }
 
@@ -69,9 +69,10 @@ body {
     height: 70px;
     align-items: center;
     padding-bottom: 10px;
+    gap: 90px;
 }
 
-button {
+.play-again-button {
     font-size: 20px;
     border-radius: 5px;
     background-color: blue;
@@ -89,8 +90,16 @@ button {
     width: 700px;
 }
 
-.accuracy {
-    
+.new-player-name {
+    display: flex;
+    flex-direction: column ;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.player-name-display {
+    font-size: 25px;
 }
 
 
