--- a/style.css
+++ b/style.css
@@ -13,9 +13,33 @@ body {
     background-color: rgb(137, 131, 131);
 }
 
+.game {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.leadership-title {
+    font-size: 25px;
+    border: 1px solid black;
+}
+
+.leadership-board {
+    height: 300px;
+    width: 340px;
+    border: 1px solid black;
+}
+
+.player-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 30px;
+}
+
 #board {
     background-color: white;
-    
 }
 
 .grid-board {
