--- a/style.css
+++ b/style.css
@@ -91,6 +91,15 @@ body {
     width: 200px;
 }
 
+.add-name-button {
+    font-size: 20px;
+    border-radius: 5px;
+    background-color: blue;
+    color: white;
+    height: 40px;
+    width: 120px;
+}
+
 .finish-message {
     display: flex;
     justify-content: center;
@@ -100,13 +109,7 @@ body {
     width: 700px;
 }
 
-.new-player-name {
-    display: flex;
-    flex-direction: column ;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-}
+
 
 .player-name-display {
     font-size: 25px;
@@ -168,8 +171,31 @@ body {
     cursor: pointer;
 }
 
+.pop-up-player-name {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    font-size: 20px;
+}
 
-
+.new-player-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    margin: 200px auto;
+    height: 150px;
+    width: 340px;
+    background-color: lightgrey;
+}
 
 
 
